plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}

android {
    compileSdk 35

    defaultConfig {
        applicationId "com.byteflipper.ffsensitivities"
        minSdk 26
        targetSdk 35
        versionCode 46
        versionName "v1.3.8"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true

            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }

        debug {
            //applicationIdSuffix '.debug'
            versionNameSuffix ' Debug'

        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    viewBinding {
        enabled = true
    }
    namespace 'com.byteflipper.ffsensitivities'

    buildFeatures {
        viewBinding true
        buildConfig true
    }

    bundle {
        storeArchive {
            enable = true
        }
    }

    lintOptions {
        disable 'NonConstantResourceId'
    }
}

dependencies {
    implementation libs.recyclerview
    def nav_version = "2.5.0"
    implementation "androidx.navigation:navigation-fragment:$nav_version"
    implementation "androidx.navigation:navigation-ui:$nav_version"

    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation(libs.activity)

    implementation platform('com.google.firebase:firebase-bom:33.4.0')
    implementation("com.google.firebase:firebase-crashlytics")
    implementation("com.google.firebase:firebase-analytics")
    implementation("com.google.firebase:firebase-inappmessaging-display")
    implementation 'com.google.firebase:firebase-messaging:24.0.2'
    implementation 'com.google.firebase:firebase-config:22.0.0'

    implementation 'androidx.browser:browser:1.8.0'
    implementation 'androidx.core:core-splashscreen:1.0.1'
    implementation 'com.google.android.play:app-update:2.1.0'
    implementation 'com.google.android.play:review:2.0.1'
    implementation 'com.google.android.gms:play-services-ads:23.4.0'
    implementation 'com.google.android.ump:user-messaging-platform:3.0.0'

    implementation 'com.yandex.ads.adapter:admob-mobileads:7.5.0.0'

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.android.volley:volley:1.2.1'

    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'

    implementation 'com.github.pengrad:java-telegram-bot-api:7.2.1'

    implementation 'com.facebook.shimmer:shimmer:0.5.0'

    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"

    def lifecycle_version = '2.8.1'
    implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
    implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}